# AlgorithmTrainer

./: CMakeLists.txt  README.md
cmake-targets/core/: CMakeLists.txt
cmake-targets/core/include/core/: abstract_block.hpp  block_collection.hpp  branch.hpp  i_executable.hpp
cmake-targets/core/include/core/management/: registable.hpp  with_uuid.hpp
cmake-targets/core/src/core/: abstract_block.cpp  block_collection.cpp
cmake-targets/core/src/core/management/: registable.cpp  with_uuid.cpp
cmake-targets/dev_test/: main.cpp
